--- a/contact.html
+++ b/contact.html
@@ -9,10 +9,14 @@
    <h3 id="contact-content">Napisz do mnie</h3>
     <form action="https://formspree.io/your@email.com"
       method="POST">
-    <input type="text" name="name">
-    <input type="email" name="_replyto">
-    <input type="text" name="message">
-    <input type="submit" value="Send">
+      <p id="name">Your name</p>
+      <input type="text" name="name">
+      <p id="email">Your email</p>
+      <input type="email" name="_replyto">
+      <p id="message">Your message...</p>
+      <input type="text" name="message">
+   
+<input type="submit" value="Send">
     </form> 
     </footer>
 </body>
