--- a/contact.html
+++ b/contact.html
@@ -9,15 +9,13 @@
    <h3 id="contact-content">Napisz do mnie</h3>
     <form action="https://formspree.io/your@email.com"
       method="POST">
-      <ul>
-          <li id="name">Your name</li>
-          <input type="text" name="name">
-          <li id="email">Your Email</li>
-          <input type="email" name="_replyto">
-          <li id="message">Your message</li>
-          <input type="text" name="message"><br />
-          <input type="submit" value="Send">
-           </ul>
+      <p id="name">Your name</p>
+      <input type="text" name="name">
+      <p id="email">Your email</p>
+      <input type="email" name="_replyto">
+      <p id="message">Your message</p>
+      <input type="text" name="message"><br />
+      <input type="submit" value="Send">
     </form> 
     </footer>
 </body>
