--- a/contact.html
+++ b/contact.html
@@ -9,12 +9,12 @@
    <h3 id="contact-content">Napisz do mnie</h3>
     <form action="https://formspree.io/your@email.com"
       method="POST">
-      <p id="name">Your name</p>
+      <label for="name">Your name</label>
       <input type="text" name="name">
-      <p id="email">Your email</p>
+      <label for="email">Email</label>
       <input type="email" name="_replyto">
-      <p id="message">Your message</p>
-      <input type="text" name="message"><br />
+      <label for="message">Your message</label>
+      <textarea maxlenght="1000"><input type="text" name="message"></textarea><br />
       <input type="submit" value="Send">
     </form> 
     </footer>
