--- a/contact.html
+++ b/contact.html
@@ -11,10 +11,13 @@
       method="POST">
       <label for="name">Your name</label>
       <input type="text" name="name">
+      <br />
       <label for="email">Email</label>
       <input type="email" name="_replyto">
+      <br />
       <label for="message">Your message</label>
-      <textarea maxlenght="1000"><input type="text" name="message"></textarea><br />
+      <textarea maxlenght="1000"></textarea>
+      <br />
       <input type="submit" value="Send">
     </form> 
     </footer>
