--- a/contact.html
+++ b/contact.html
@@ -9,17 +9,20 @@
    <h3 id="contact-content">Napisz do mnie</h3>
     <form action="https://formspree.io/your@email.com"
       method="POST">
-      <label for="name">Your name</label> <br />
+      <label for="name">Your name</label>
        <br />
       <input type="text" name="name">
       <br />
-      <label for="email">Email</label> <br />
+      <br />
+      <label for="email">Email</label>
        <br />
       <input type="email" name="_replyto">
       <br />
-      <label for="message">Your message</label> <br />
+      <br />
+      <label for="message">Your message</label>
        <br />
       <textarea maxlenght="1000"></textarea>
+      <br />
       <br />
       <input type="submit" value="Send">
     </form> 
