--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
 <body>
    <footer id="text-content">
    <h3 id="contact-content">Send me a message</h3>
-    <form action="https://formspree.io/your@email.com"
+    <form action="https://formspree.io/an.sieradzka@gmail.com"
       method="POST">
       <label for="name">Your name:</label><br />
           <input type="text" id="name" name="name"><br /><br />
