--- a/contact.html
+++ b/contact.html
@@ -20,9 +20,16 @@
           
       <label for="email">Email:</label><br />
           <input type="email" name="_replyto"><br /><br />
-          
       <label for="message">Your message:</label><br />
           <textarea maxlenght="4000"></textarea><br />
+              <select name="miasto" id="miasto">
+              <option value="kraków">Kraków</option>
+              <option value="warszawa">Warszawa</option>
+              <option value="gdańsk">Gdańsk</option>
+          </select><br />
+          <label><input type="radio" id="mężczyzna"> Mężczyzna</label>
+          <label><input type="radio" id="kobieta">Kobieta</label><br />
+          <input type="checkbox" id="zgoda"><label for="zgoda">Zgoda</label><br />
       <input type="submit" value="Send">
     </form> 
     </footer>
