--- a/contact.html
+++ b/contact.html
@@ -28,8 +28,8 @@
               <option value="gdańsk">Gdańsk</option>
           </select><br />
           <label><input type="radio" id="mężczyzna"> Mężczyzna</label>
-          <label><input type="radio" id="kobieta">Kobieta</label><br />
-          <input type="checkbox" id="zgoda"><label for="zgoda">Zgoda</label><br />
+        <label><input type="radio" id="kobieta">Kobieta</label><br /><br />
+       <input type="checkbox" id="zgoda"><label for="zgoda">Zgoda na dane osobowe</label><br /> <br />
       <input type="submit" value="Send">
     </form> 
     </footer>
